--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -851,6 +851,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -878,6 +879,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -894,6 +896,7 @@ allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
+allow 2.58.56.233;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
@@ -1388,6 +1391,7 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
+allow 2a12:a800:1:1:2:58:56:233;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
@@ -1555,7 +1559,6 @@ allow 51.96.22.229;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
