--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -47,7 +47,6 @@ allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
-allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
@@ -116,7 +115,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
@@ -198,7 +196,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
 allow 176.97.114.202;
-allow 177.149.135.191;
+allow 177.149.132.247;
 allow 178.162.201.174;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -604,7 +602,6 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.182.96.246;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -850,7 +847,6 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1043,6 +1039,7 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1090,10 +1087,13 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1497,6 +1497,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.151.122.34;
 allow 45.154.98.26;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1514,6 +1515,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1550,11 +1552,15 @@ allow 51.96.17.174;
 allow 51.96.22.229;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.183;
