--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -34,6 +34,7 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 107.172.31.218;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.174.146.25;
 allow 107.175.84.69;
@@ -47,6 +48,7 @@ allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
+allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
@@ -137,7 +139,6 @@ allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
-allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.66;
@@ -276,7 +277,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -839,6 +839,7 @@ allow 23.129.64.173;
 allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -847,6 +848,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -905,6 +907,7 @@ allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
@@ -1110,7 +1113,6 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1438,6 +1440,9 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.136;
+allow 3.254.120.240;
+allow 34.244.191.158;
+allow 34.251.228.90;
 allow 35.0.127.52;
 allow 35.91.154.39;
 allow 37.114.41.119;
@@ -1584,6 +1589,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.246.231.47;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
@@ -1659,6 +1665,7 @@ allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
+allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
