--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,6 +149,7 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
+allow 157.175.194.207;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -166,6 +167,7 @@ allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
+allow 16.24.145.203;
 allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
@@ -844,6 +846,7 @@ allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
+allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -912,6 +915,7 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:1c9::1;
+allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
@@ -1446,6 +1450,8 @@ allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.136;
 allow 3.254.120.240;
+allow 3.28.76.181;
+allow 3.29.242.132;
 allow 34.244.191.158;
 allow 34.251.228.90;
 allow 35.0.127.52;
@@ -1525,6 +1531,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1563,7 +1570,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
