--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -135,6 +135,7 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:1c9::1;
+allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
