--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -107,6 +107,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -153,7 +154,6 @@ set_real_ip_from 154.213.192.19;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.220.88.93;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 16.16.47.203;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
@@ -232,7 +232,6 @@ set_real_ip_from 179.43.167.198;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.166.73.57;
 set_real_ip_from 18.227.140.150;
 set_real_ip_from 184.75.223.235;
 set_real_ip_from 185.100.85.132;
@@ -284,7 +283,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
@@ -804,6 +802,7 @@ set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -866,9 +865,9 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
-set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
@@ -905,7 +904,6 @@ set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2406:da14:9ad:f600:15f4:2da7:c7e5:fab4;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
@@ -1139,7 +1137,6 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
-set_real_ip_from 2a05:d016:145:7700:c30:cef9:cf42:527d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1483,7 +1480,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 43.198.153.20;
 set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
@@ -1546,7 +1542,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1612,7 +1607,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.168.186.13;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.209.253;
