--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -148,6 +148,7 @@ allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
+allow 154.213.187.36;
 allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
@@ -196,7 +197,6 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
@@ -634,6 +634,7 @@ allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
+allow 193.218.118.94;
 allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
@@ -691,6 +692,7 @@ allow 199.195.251.78;
 allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
+allow 2001:15e8:110:7d00::30b;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
@@ -1029,7 +1031,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1401,6 +1402,7 @@ allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:8a40:f313::29;
@@ -1581,6 +1583,7 @@ allow 5.255.117.56;
 allow 5.255.118.183;
 allow 5.255.118.218;
 allow 5.255.120.205;
+allow 5.255.120.219;
 allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
@@ -1629,6 +1632,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.210.78.252;
+allow 80.211.204.89;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1658,7 +1662,6 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
